--- a/SourceCode/PantryBackend/Pantry.Services/Pantry.Services.csproj
+++ b/SourceCode/PantryBackend/Pantry.Services/Pantry.Services.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.7.0" />
   </ItemGroup>
