Update Good (delete/update/list

--- a/SourceCode/PantryBackend/Pantry.Api/appsettings.json
+++ b/SourceCode/PantryBackend/Pantry.Api/appsettings.json
@@ -11,6 +11,7 @@
   "DB_DB": "pantry",
   "DB_USER": "pantry",
   "DB_PASSWORD": "pantry",
+  "ALLOWED_ORIGINS": "http://localhost:5173",
   "RabbitMQ": {
     "Host": "localhost",
     "Port": "5672",
