Update Backend to handle messages

--- a/SourceCode/PantryBackend/Pantry.Api/appsettings.json
+++ b/SourceCode/PantryBackend/Pantry.Api/appsettings.json
@@ -16,6 +16,7 @@
     "Host": "localhost",
     "Port": "5672",
     "User": "pantry",
-    "Password": "pantry"
+    "Password": "pantry",
+    "QueueName": "Pantry.Api"
   }
 }
