--- a/SourceCode/PantryBackend/Pantry.Recipe.Api/appsettings.json
+++ b/SourceCode/PantryBackend/Pantry.Recipe.Api/appsettings.json
@@ -10,5 +10,12 @@
   "DB_PORT": "5432",
   "DB_DB": "pantry",
   "DB_USER": "pantry",
-  "DB_PASSWORD": "pantry"
+  "DB_PASSWORD": "pantry",
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Port": "5672",
+    "User": "pantry",
+    "Password": "pantry",
+    "QueueName": "Pantry.Recipe.Api"
+  }
 }
