--- a/SourceCode/PantryBackend/Pantry.Plan.Api/appsettings.json
+++ b/SourceCode/PantryBackend/Pantry.Plan.Api/appsettings.json
@@ -15,6 +15,7 @@
     "Host": "localhost",
     "Port": "5672",
     "User": "pantry",
-    "Password": "pantry"
+    "Password": "pantry",
+    "QueueName": "Pantry.Plan.Api"
   }
 }
