--- a/.github/workflows/publish-pantry-api.yml
+++ b/.github/workflows/publish-pantry-api.yml
@@ -19,4 +19,5 @@ jobs:
           github-token: '${{ secrets.PACKAGE_TOKEN }}'
           image-name: pantry-api
           dockerfile: ./SourceCode/PantryBackend/Pantry.Api/Dockerfile
-          build-context: ./SourceCode/PantryBackend/Pantry.Api
+          context: ./SourceCode/PantryBackend
+          build-context: ./SourceCode/PantryBackend/
