--- a/SourceCode/PantryFrontend/pantry-app/package.json
+++ b/SourceCode/PantryFrontend/pantry-app/package.json
@@ -37,6 +37,7 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "^1.5.3",
-    "@fortawesome/fontawesome-free": "^6.5.1"
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "svelte-device-info": "^1.0.0"
   }
 }
