--- a/SourceCode/PantryFrontend/pantry-app/package.json
+++ b/SourceCode/PantryFrontend/pantry-app/package.json
@@ -36,6 +36,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@auth/sveltekit": "^0.5.0",
     "@floating-ui/dom": "^1.5.3",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "svelte-device-info": "^1.0.0"
