--- a/SourceCode/PantryBackend/docker-compose/docker-compose.yml
+++ b/SourceCode/PantryBackend/docker-compose/docker-compose.yml
@@ -16,6 +16,10 @@ volumes:
     driver: local
   rabbitmq-data:
     driver: local
+  prometheus_data:
+    driver: local
+  grafana_data:
+    driver: local
 
 services:
   pantry.recipe.api:
@@ -219,3 +223,98 @@ services:
       - rabbitmq-data:/var/log/rabbitmq
     networks:
       - pantry-network
+
+#https://github.com/vegasbrianc/prometheus
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus/:/etc/prometheus/
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+    ports:
+      - 9090:9090
+    links:
+      - pantry.recipe.api:pantry.recipe.api
+      - pantry.plan.api:pantry.plan.api
+      - pantry.api:pantry.api
+      - pantry.scanner.api:pantry.scanner.api
+#      - cadvisor:cadvisor
+#      - alertmanager:alertmanager
+#    depends_on:
+#      - cadvisor
+    networks:
+      - pantry-network
+    restart: always
+
+#  node-exporter:
+#    image: prom/node-exporter
+#    container_name: node-exporter
+#    volumes:
+#      - /proc:/host/proc:ro
+#      - /sys:/host/sys:ro
+#      - /:/rootfs:ro
+#    command: 
+#      - '--path.procfs=/host/proc' 
+#      - '--path.sysfs=/host/sys'
+#      - --collector.filesystem.ignored-mount-points
+#      - "^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)"
+#    ports:
+#      - 9100:9100
+#    networks:
+#      - pantry-network
+#    restart: always
+#    deploy:
+#      mode: global
+
+#  alertmanager:
+#    image: prom/alertmanager
+#    ports:
+#      - 9093:9093
+#    volumes:
+#      - ./alertmanager/:/etc/alertmanager/
+#    networks:
+#      - pantry-network
+#    restart: always
+#    command:
+#      - '--config.file=/etc/alertmanager/config.yml'
+#      - '--storage.path=/alertmanager'
+
+#  cadvisor:
+#    image: gcr.io/cadvisor/cadvisor
+#    container_name: cadvisor
+#    volumes:
+#      - /:/rootfs:ro
+#      - /var/run:/var/run:rw
+#      - /sys:/sys:ro
+#      - /var/lib/docker/:/var/lib/docker:ro
+#    ports:
+#      - 8080:8080
+#    networks:
+#      - pantry-network
+#    restart: always
+#    deploy:
+#      mode: global
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    user: "472"
+#    environment:
+#      - GF_INSTALL_PLUGINS='grafana-clock-panel,grafana-simple-json-datasource'
+    depends_on:
+      - prometheus
+    ports:
+      - 3000:3000
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning/:/etc/grafana/provisioning/
+    env_file:
+      - ./grafana/config.monitoring
+    networks:
+      - pantry-network
+    restart: always
