--- a/Overview/docker-compose.yml
+++ b/Overview/docker-compose.yml
@@ -16,6 +16,10 @@ volumes:
     driver: local
   rabbitmq-data:
     driver: local
+  prometheus_data:
+    driver: local
+  grafana_data:
+    driver: local
 
 services:
   pantry.app:
@@ -228,3 +232,42 @@ services:
       - rabbitmq-data:/var/log/rabbitmq
     networks:
       - pantry-network
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus/:/etc/prometheus/
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+    ports:
+      - 9090:9090
+    links:
+      - pantry.recipe.api:pantry.recipe.api
+      - pantry.plan.api:pantry.plan.api
+      - pantry.api:pantry.api
+      - pantry.scanner.api:pantry.scanner.api
+    networks:
+      - pantry-network
+    restart: always
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    user: "472"
+    depends_on:
+      - prometheus
+    ports:
+      - 3001:3000
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning/:/etc/grafana/provisioning/
+    env_file:
+      - ./grafana/config.monitoring
+    networks:
+      - pantry-network
+    restart: always
