--- a/SourceCode/PantryBackend/Pantry.Api/appsettings.json
+++ b/SourceCode/PantryBackend/Pantry.Api/appsettings.json
@@ -18,5 +18,10 @@
     "User": "pantry",
     "Password": "pantry",
     "QueueName": "Pantry.Api"
+  },
+  "Jaeger": {
+    "Protocol": "http",
+    "Host": "localhost",
+    "Port": "6831"
   }
 }
