Adding OpenTelemetry and HealthChecks to all services

--- a/SourceCode/PantryBackend/Pantry.Plan.Api/appsettings.json
+++ b/SourceCode/PantryBackend/Pantry.Plan.Api/appsettings.json
@@ -17,5 +17,10 @@
     "User": "pantry",
     "Password": "pantry",
     "QueueName": "Pantry.Plan.Api"
+  },
+  "Jaeger": {
+    "Protocol": "http",
+    "Host": "localhost",
+    "Port": "6831"
   }
 }
