--- a/SourceCode/PantryBackend/Pantry.Plan.Api/Pantry.Plan.Api.csproj
+++ b/SourceCode/PantryBackend/Pantry.Plan.Api/Pantry.Plan.Api.csproj
@@ -9,7 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="8.0.0" />
+	<PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="8.0.0" />
+	<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.0" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
+	<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.7.0" />
+	<PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.7.0-rc.1" />
+	<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.7.0" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.7.0" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta.9" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
