--- a/SourceCode/PantryBackend/docker-compose/docker-compose.yml
+++ b/SourceCode/PantryBackend/docker-compose/docker-compose.yml
@@ -42,6 +42,9 @@ services:
       - RABBITMQ__PASSWORD=pantry
       - RABBITMQ__QUEUENAME=Pantry.Recipe.Api
       - ALLOWED_ORIGINS="http://localhost:5173"
+      - JAEGER__PROTOCOL=http
+      - JAEGER__HOST=jaeger
+      - JAEGER__PORT=4317
     restart: always
     networks:
       - pantry-recipe-network   
@@ -90,6 +93,9 @@ services:
       - RABBITMQ__PASSWORD=pantry
       - RABBITMQ__QUEUENAME=Pantry.Plan.Api
       - ALLOWED_ORIGINS="http://localhost:5173"
+      - JAEGER__PROTOCOL=http
+      - JAEGER__HOST=jaeger
+      - JAEGER__PORT=4317
     restart: always
     networks:
       - pantry-plan-network
