--- a/SourceCode/PantryBackend/docker-compose/prometheus/prometheus.yml
+++ b/SourceCode/PantryBackend/docker-compose/prometheus/prometheus.yml
@@ -36,6 +36,22 @@ scrape_configs:
     static_configs:
          - targets: ['pantry.api:8080']
 
+  - job_name: 'pantry-plan-api'
+
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 15s
+
+    static_configs:
+         - targets: ['pantry.plan.api:8080']
+  
+  - job_name: 'pantry-recipe-api'
+
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 15s
+
+    static_configs:
+         - targets: ['pantry.recipe.api:8080']
+  
   - job_name: 'prometheus'
 
     # Override the global default and scrape targets from this job every 5 seconds.
