Adding simple AuthorizationPolicy

--- a/SourceCode/PantryBackend/Pantry.Gateway/appsettings.json
+++ b/SourceCode/PantryBackend/Pantry.Gateway/appsettings.json
@@ -10,42 +10,49 @@
     "Routes": {
       "goods-route": {
         "ClusterId": "goods-cluster",
+        "AuthorizationPolicy": "default",
         "Match": {
           "Path": "/goods/{**catch-all}"
         }
       },
       "goodratings-route": {
         "ClusterId": "goodratings-cluster",
+        "AuthorizationPolicy": "default",
         "Match": {
           "Path": "/goodratings/{**catch-all}"
         }
       },
       "suggestions-route": {
         "ClusterId": "suggestions-cluster",
+        "AuthorizationPolicy": "default",
         "Match": {
           "Path": "/suggestions/{**catch-all}"
         }
       },
       "meals-route": {
         "ClusterId": "meals-cluster",
+        "AuthorizationPolicy": "default",
         "Match": {
           "Path": "/meals/{**catch-all}"
         }
       },
       "recipes-route": {
         "ClusterId": "recipes-cluster",
+        "AuthorizationPolicy": "default",
         "Match": {
           "Path": "/recipes/{**catch-all}"
         }
       },
       "ingredients-route": {
         "ClusterId": "ingredients-cluster",
+        "AuthorizationPolicy": "default",
         "Match": {
           "Path": "/ingredients/{**catch-all}"
         }
       },
       "recipedetails-route": {
         "ClusterId": "recipedetails-cluster",
+        "AuthorizationPolicy": "default",
         "Match": {
           "Path": "/recipedetails/{**catch-all}"
         }
