--- a/SourceCode/PantryBackend/Pantry.Gateway/appsettings.json
+++ b/SourceCode/PantryBackend/Pantry.Gateway/appsettings.json
@@ -5,6 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Authentication": {
+    "GitHub": {
+      "ClientId": "your-client-id",
+      "ClientSecret": "your-client-secret"
+    } 
+  },
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
