--- a/SourceCode/PantryBackend/Pantry.Api/Pantry.Api.csproj
+++ b/SourceCode/PantryBackend/Pantry.Api/Pantry.Api.csproj
@@ -1,12 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-    <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <InvariantGlobalization>true</InvariantGlobalization>
-        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-        <UserSecretsId>60372b5a-29d4-4352-b2ba-76c3c9ccdf5d</UserSecretsId>
+    <PropertyGroup>        
+        <ProductName>Pantry.Api</ProductName>
     </PropertyGroup>
 
     <ItemGroup>
@@ -30,6 +25,10 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Pantry.Module.Recipe\Pantry.Module.Recipe.csproj" />
     </ItemGroup>
 
 </Project>
