--- a/SourceCode/PantryBackend/Pantry.Module.Authentication/Pantry.Module.Authentication.csproj
+++ b/SourceCode/PantryBackend/Pantry.Module.Authentication/Pantry.Module.Authentication.csproj
@@ -1,13 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <Product>Pantry.Module.Authentication</Product>
+        <RootNamespace>Pantry.Module.Authentication</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0"/>
     </ItemGroup>
 
 </Project>
