--- a/SourceCode/PantryBackend/Pantry.Module.Scanner/Pantry.Module.Scanner.csproj
+++ b/SourceCode/PantryBackend/Pantry.Module.Scanner/Pantry.Module.Scanner.csproj
@@ -1,12 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <InvariantGlobalization>true</InvariantGlobalization>
-    <UserSecretsId>b2cd8f7a-ff21-425e-97ca-1cb28c2aab68</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <Product>Pantry.Module.Scanner</Product>
     <RootNamespace>Pantry.Module.Scanner</RootNamespace>
   </PropertyGroup>
 
