--- a/SourceCode/PantryBackend/Pantry.Module.Scanner.Tests/Pantry.Module.Scanner.Tests.csproj
+++ b/SourceCode/PantryBackend/Pantry.Module.Scanner.Tests/Pantry.Module.Scanner.Tests.csproj
@@ -26,4 +26,11 @@
       <ProjectReference Include="..\Pantry.Module.Scanner\Pantry.Module.Scanner.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageVersion Update="xunit.runner.visualstudio" Version="3.0.2">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageVersion>
+    </ItemGroup>
+
 </Project>
