--- a/SourceCode/PantryBackend/Directory.Packages.props
+++ b/SourceCode/PantryBackend/Directory.Packages.props
@@ -3,6 +3,24 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="Bogus" Version="35.6.1" />
     <PackageVersion Include="MediatR" Version="12.4.1" />
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.2" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.2" />
+    <PackageVersion Include="Npgsql" Version="9.0.2" />
+    <PackageVersion Include="Riok.Mapperly" Version="4.1.1" />
+    <PackageVersion Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
+    <PackageVersion Include="AspNetCore.HealthChecks.Rabbitmq" Version="9.0.0" />
+    <PackageVersion Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0" />
+    <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
+    <PackageVersion Include="Scalar.AspNetCore" Version="2.0.12" />
+    <PackageVersion Include="Shouldly" Version="4.3.0" />
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+    <PackageVersion Include="Testcontainers.PostgreSql" Version="4.2.0" />
+    <PackageVersion Include="Testcontainers.RabbitMq" Version="4.2.0" />
+    <PackageVersion Include="Testcontainers.Xunit" Version="4.2.0" />
+    <PackageVersion Include="WolverineFx.Http" Version="3.8.1" />
+    <PackageVersion Include="WolverineFx.Http.FluentValidation" Version="3.8.1" />
   </ItemGroup>
 </Project>
