--- a/SourceCode/PantryBackend/Pantry.Api/appsettings.json
+++ b/SourceCode/PantryBackend/Pantry.Api/appsettings.json
@@ -10,5 +10,22 @@
       "ClientId": "your-client-id",
       "ClientSecret": "your-client-secret"
     } 
+  },
+  "DB_HOST": "localhost",
+  "DB_PORT": "5432",
+  "DB_DB": "pantry",
+  "DB_USER": "pantry",
+  "DB_PASSWORD": "pantry",
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Port": "5672",
+    "User": "pantry",
+    "Password": "pantry",
+    "QueueName": "Pantry.Recipe.Api"
+  },
+  "Jaeger": {
+    "Protocol": "http",
+    "Host": "localhost",
+    "Port": "6831"
   }
 }
