--- a/SourceCode/PantryBackend/Pantry.Module.Plan/Pantry.Module.Plan.csproj
+++ b/SourceCode/PantryBackend/Pantry.Module.Plan/Pantry.Module.Plan.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <Product>Pantry.Module.Plan</Product>
@@ -31,6 +31,14 @@
     <ItemGroup>
         <ProjectReference Include="..\Pantry.Module.Authentication\Pantry.Module.Authentication.csproj"/>
         <ProjectReference Include="..\Pantry.Module.Shared\Pantry.Module.Shared.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageVersion Update="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
+      <PackageVersion Update="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageVersion>
     </ItemGroup>
 
 </Project>
