--- a/SourceCode/PantryBackend/Pantry.Module.Recipe/Pantry.Module.Recipe.csproj
+++ b/SourceCode/PantryBackend/Pantry.Module.Recipe/Pantry.Module.Recipe.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <Product>Pantry.Module.Recipe</Product>
@@ -6,11 +6,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0"/>
-        <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="9.0.0"/>
-        <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0"/>
-        <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.4"/>
-        <PackageReference Include="MediatR" />
+        <PackageReference Include="AspNetCore.HealthChecks.NpgSql"/>
+        <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq"/>
+        <PackageReference Include="AspNetCore.HealthChecks.UI.Client"/>
+        <PackageReference Include="MediatR"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" />
+        <PackageReference Include="Riok.Mapperly"/>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL"/>
+        <PackageReference Include="Swashbuckle.AspNetCore"/>
+        <PackageReference Include="WolverineFx.Http" />
+        <PackageReference Include="WolverineFx.Http.FluentValidation" />
+        
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.4"/>        
         <PackageReference Include="Npgsql.OpenTelemetry" Version="9.0.2"/>
         <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.11.0"/>
         <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.7.0-rc.1"/>
@@ -18,22 +25,24 @@
         <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.10.1"/>
         <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta.9"/>
         <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.10.0"/>
-        <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="9.0.1"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.1">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0"/>
-        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0"/>
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3"/>
-        <PackageReference Include="Riok.Mapperly" Version="4.1.1"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0"/>
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Pantry.Module.Authentication\Pantry.Module.Authentication.csproj"/>
         <ProjectReference Include="..\Pantry.Module.Shared\Pantry.Module.Shared.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Handler\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageVersion Update="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="Pantry.Module.Recipe.IntegrationTests" />
     </ItemGroup>
 
 </Project>
