--- a/SourceCode/PantryBackend/Pantry.Module.Scanner/Pantry.Module.Scanner.csproj
+++ b/SourceCode/PantryBackend/Pantry.Module.Scanner/Pantry.Module.Scanner.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Product>Pantry.Module.Scanner</Product>
@@ -16,6 +16,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Pantry.Module.Shared\Pantry.Module.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageVersion Update="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
   </ItemGroup>
 
 </Project>
