--- a/SourceCode/PantryBackend/Pantry.Module.Shared/Pantry.Module.Shared.csproj
+++ b/SourceCode/PantryBackend/Pantry.Module.Shared/Pantry.Module.Shared.csproj
@@ -8,4 +8,10 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Configuration.Abstractions">
+      <HintPath>..\..\..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\9.0.1\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
